--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,9 @@ header {
     position: sticky;
     top: 0;
 }
-
+header h1 {
+    text-transform: uppercase;
+}
 header nav {
     display: flex;
     flex-direction: row;
