--- a/styles/item.module.css
+++ b/styles/item.module.css
@@ -1,17 +1,18 @@
 .item {
     width: 100%;
     padding: 20px;
-    border: 1px solid rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 8px;
     background: white;
     color: black;
     cursor: pointer;
-    box-shadow: 0 5px 10px 10px hsla(0, 0%, 50%, .2);
+    box-shadow: 0 0 4px 4px hsla(0, 0%, 80%, 0.2);
 
     transition: .1s linear;
 }
 
 .item:hover {
+    box-shadow: 0 0 4px 4px hsla(0, 0%, 50%, 0.5);
     background: black;
     color: white;
 }
