--- a/styles/modal.module.css
+++ b/styles/modal.module.css
@@ -15,7 +15,7 @@
 }
 
 .inner {
-    width: 50vw;
+    width: min(100vw, 800px);
     background: white;
     padding: 20px;
     border: 1px solid rgba(0, 0, 0, 0.4);
