--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -25,3 +25,14 @@
 .list * {
     margin-top: 10px;
 }
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+    text-align: center;
+}
+.container * {
+    margin-top: 20px;
+}
