--- a/styles/item.module.css
+++ b/styles/item.module.css
@@ -1,6 +1,5 @@
 .item {
     width: 100%;
-    padding: 20px;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 8px;
     background: white;
@@ -9,6 +8,10 @@
     box-shadow: 0 0 4px 4px hsla(0, 0%, 80%, 0.2);
 
     transition: .1s linear;
+}
+
+.item__inner {
+    padding: 20px;
 }
 
 .item:hover {
