--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@ a {
 
 /* header */
 header {
+    width: 100%;
     padding: 20px;
     background-color: hsla(0, 5%, 100%, .5);
     backdrop-filter: saturate(180%) blur(4px);
