--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@ a {
     }
 
     .menu div {
-        box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 0 2px 2px hsla(0, 0%, 80%, .5);
         width: 50px;
         height: 6px;
         border-radius: 2px;
@@ -57,6 +57,7 @@ header h1 {
 }
 
 header ul {
+    text-align: center;
     list-style: none;
     display: flex;
     flex-direction: row;
@@ -82,14 +83,16 @@ header a:hover {
 
 /* Vertical Navbar*/
 .verticalNav {
+    position: sticky;
+    top: 90px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: hsla(0, 5%, 100%, .5);
-    backdrop-filter: saturate(180%) blur(4px);
-    box-shadow: 0 5px 10px 10px hsla(0, 0%, 80%, .3);
+    background-color: hsla(0, 5%, 100%, .8);
+    backdrop-filter: saturate(180%) blur(8px);
+    box-shadow: 0 0 10px 10px hsla(0, 0%, 80%, .5);
     margin: 10px;
     padding: 20px;
     border-radius: 8px;
