--- a/styles/loading.module.css
+++ b/styles/loading.module.css
@@ -1,55 +1,95 @@
+@keyframes gradient {
+    0% {
+        background-position: 0 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0 50%;
+    }
+}
 .h1r {
-    background: rgba(0, 0, 0, 0.2);
     width: 30%;
     height: 40px;
     border-radius: 8px;
     margin: 10px 0;
+
+    background: linear-gradient(-45deg, #999, #bbb, #ddd, #666);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
 }
 
 .h2r {
-    background: rgba(0, 0, 0, 0.2);
     width: 40%;
-    height: 40px;
-    border-radius: 8px;
-    margin: 10px 0;
+    height: 20px;
+    border-radius: 4px;
+    margin: 5px 0;
+
+    background: linear-gradient(-45deg, #999, #bbb, #ddd, #666);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
+}
+.h3r {
+    width: 80%;
+    height: 20px;
+    border-radius: 4px;
+    margin: 5px 0;
+
+    background: linear-gradient(-45deg, #999, #bbb, #ddd, #666);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
 }
 
 .elementR {
-    background: rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 100px;
-    border-radius: 8px;
+    border-radius: 4px;
     margin: 10px 0;
+
+    background: linear-gradient(-45deg, #999, #bbb, #ddd, #666);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
 }
 
 .buttonR {
-    background: rgba(0, 0, 0, 0.2);
     width: 100%;
-    height: 50px;
-    border-radius: 8px;
-    margin: 10px 0;
+    height: 40px;
+    border-radius: 4px;
+    margin: 5px 0;
+    background: linear-gradient(-45deg, #999, #bbb, #ddd, #666);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
 }
 
 .blockR {
-    background: rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 200px;
-    border-radius: 8px;
+    border-radius: 4px;
     margin: 10px 0;
+    background: linear-gradient(-45deg, #999, #bbb, #ddd, #666);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
 }
 
 .pr {
-    background: rgba(0, 0, 0, 0.2);
     width: 100%;
     height: 60px;
     border-radius: 8px;
     margin: 10px 0;
+
+    background: linear-gradient(-45deg, #999, #bbb, #ddd, #666);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
 }
 
 .headerR {
     width: 100%;
     position: sticky;
     top: 0;
-    background: rgba(0, 0, 0, 0.2);
     height: 50px;
+
+    background: linear-gradient(-45deg, #999, #bbb, #ddd, #666);
+    background-size: 400% 400%;
+    animation: gradient 3s ease infinite;
 }
