--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,6 +44,7 @@ header {
     background-color: hsla(0, 5%, 100%, .5);
     backdrop-filter: saturate(180%) blur(4px);
     box-shadow: 0 5px 10px 10px hsla(0, 0%, 80%, .3);
+    animation: gradient 5s linear infinite;
     position: sticky;
     top: 0;
     display: flex;
@@ -56,6 +57,17 @@ header h1 {
     text-transform: uppercase;
 }
 
+@keyframes gradient {
+    0% {
+        box-shadow: 0 5px 10px 10px hsla(0, 0%, 80%, .3);
+    }
+    50% {
+        box-shadow: 0 5px 5px 5px hsla(0, 0%, 80%, .3);
+    }
+    100% {
+        box-shadow: 0 5px 10px 10px hsla(0, 0%, 80%, .3);
+    }
+}
 header ul {
     text-align: center;
     list-style: none;
