--- a/styles/item.module.css
+++ b/styles/item.module.css
@@ -2,7 +2,9 @@
     width: 100%;
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 8px;
-    background: white;
+    background: linear-gradient(-45deg, #fff, #eee);
+    background-size: 400% 400%;
+    animation: gradient 10s linear infinite;
     color: black;
     cursor: pointer;
     box-shadow: 0 0 4px 4px hsla(0, 0%, 80%, 0.2);
@@ -17,6 +19,35 @@
 .item:hover {
     box-shadow: 0 0 4px 4px hsla(0, 0%, 50%, 0.5);
     transform: scale(101%);
-    background: black;
+    background: linear-gradient(-45deg, #000, #222);
+    background-size: 400% 400%;
+    animation: hover 3s linear infinite;
     color: white;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0 50%;
+    }
+}
+
+@keyframes hover {
+    0% {
+        background-position: 0 50%;
+        box-shadow: 0 0 6px 6px hsla(0, 0%, 50%, 0.5);
+    }
+    50% {
+        background-position: 100% 50%;
+        box-shadow: 0 0 2px 2px hsla(0, 0%, 50%, 0.5);
+    }
+    100% {
+        background-position: 0 50%;
+        box-shadow: 0 0 6px 6px hsla(0, 0%, 50%, 0.5);
+    }
 }
