--- a/styles/button.module.css
+++ b/styles/button.module.css
@@ -16,9 +16,9 @@
 .button:hover {
     transform: scale(102%);
     box-shadow: 0 0 4px 4px hsla(0, 0%, 80%, 0.2);
-    background: linear-gradient(-45deg, #999, #eee);
-    background-size: 400% 400%;
-    animation: gradient 15s linear infinite;
+    background: linear-gradient(-45deg, #ddd, #fff);
+    background-size: 400%;
+    animation: gradient 3s linear infinite;
     color: black;
 }
 
