--- a/styles/reviews.module.css
+++ b/styles/reviews.module.css
@@ -7,11 +7,18 @@
 }
 
 .header {
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    border: 1px solid #eee;
+    box-shadow: 0 5px 10px 10px hsla(0, 0%, 80%, .3);
+    padding: 20px;
     border-radius: 8px;
     margin-bottom: 20px;
-    position: relative;
 }
 .header ul {
+    list-style: none;
     width: 100%;
     display: flex;
     flex-direction: row;
