--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -34,9 +34,32 @@
     flex-wrap: nowrap;
     text-align: center;
 }
+
 .container * {
     margin-top: 20px;
 }
+
 .page {
     width: 100%;
+}
+
+.centered {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.centeredInner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 30px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 5px 10px 10px hsla(0, 0%, 80%, .3);
 }
