--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -31,8 +31,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     text-align: center;
+    width: 100%;
 }
 
 .container * {
