adding translation to russian 12 [bug fix]

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,7 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    z-index: 1000;
 }
 
 header h1 {
