--- a/styles/globals.css
+++ b/styles/globals.css
@@ -129,7 +129,7 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 20px 2px;
     background-color: hsla(0, 5%, 100%, .5);
     backdrop-filter: saturate(180%) blur(3px);
     box-shadow: 0 5px 20px 10px rgba(0, 0, 0, .1);
@@ -164,7 +164,7 @@ main {
     margin: 0 auto;
     padding: 20px 0;
     min-height: 100vh;
-    max-width: min(800px, 100vw);
+    max-width: min(800px, 98vw);
     width: 100%;
     display: flex;
     flex-direction: column;
