--- a/styles/modal.module.css
+++ b/styles/modal.module.css
@@ -1,17 +1,18 @@
 .modal {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(0, 0, 0, 0.4);
-    backdrop-filter: saturate(180%) blur(4px);
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: saturate(180%) blur(8px);
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 .inner {
