--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -27,6 +27,7 @@
     margin-top: 10px;
 }
 .container {
+    margin: 10px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
