--- a/components/pages/review/header/header.module.css
+++ b/components/pages/review/header/header.module.css
@@ -1,27 +1,14 @@
-.header nav ul {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .header {
-    margin-top: 30px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    border: 1px solid #eee;
-    box-shadow: 0 5px 10px 10px hsla(0, 0%, 80%, .3);
-    padding: 20px;
-    border-radius: 8px;
-    margin-bottom: 20px;
+  width: 100%;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  padding: 20px;
+  border-radius: 6px;
+  background-color: white;
+  margin-bottom: 20px;
 }
 
 .header ul {
-    list-style: none;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
 }
