--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,17 +38,13 @@ a {
 .horizontal-nav {
     width: 100%;
     padding: 20px;
-    background-color: hsla(0, 5%, 100%, .5);
-    backdrop-filter: saturate(180%) blur(8px);
+    background-color:white;
     box-shadow: 0 5px 10px 10px hsla(0, 0%, 80%, .3);
-    animation: gradient 5s linear infinite;
-    position: sticky;
-    top: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    z-index: 1000;
+    z-index: 10;
 }
 
 .horizontal-nav h1 {
@@ -73,21 +69,11 @@ a {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-}
-
-.horizontal-nav li {
-    margin-left: 14px;
-}
-
-.horizontal-nav a {
-    color: #333;
-
-    transition: .15s linear;
+    column-gap: 16px;
 }
 
 .horizontal-nav a:hover {
-    text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
-    color: black;
+    text-decoration: underline;    
 }
 
 
@@ -114,11 +100,9 @@ a {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    row-gap: 10px;
 }
 
-.verticalNav li {
-    margin-bottom: 10px;
-}
 
 /* footer */
 footer {
