--- a/components/entities/review/review.module.css
+++ b/components/entities/review/review.module.css
@@ -1,22 +1,18 @@
 .item {
-    width: 100%;
+    padding: 20px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     background: white;
-    color: black;
     box-shadow: 0 0 4px 4px hsla(0, 0%, 80%, 0.2);
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 12px;
 
     transition: .1s linear;
 }
 
-.item__inner {
-    padding: 20px;
-}
 
-.item:hover {
-    box-shadow: 0 0 4px 4px hsla(0, 0%, 50%, 0.5);
-    transform: scale(100.1%);
-}
 .author {
     text-align: right;
     font-size: smaller;
